--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/p5.play.js"></script>
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
-        authDomain: "c39-fruitcatcher.firebaseapp.com",
-        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
-        projectId: "c39-fruitcatcher",
-        storageBucket: "c39-fruitcatcher.appspot.com",
-        messagingSenderId: "686122669825",
-        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-database.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAtoOJRguuuH_7U1ogzfLQH7hAa51f9r8Q",
+    authDomain: "fruit-catcher-d4770.firebaseapp.com",
+    databaseURL: "https://fruit-catcher-d4770-default-rtdb.firebaseio.com",
+    projectId: "fruit-catcher-d4770",
+    storageBucket: "fruit-catcher-d4770.appspot.com",
+    messagingSenderId: "57454899996",
+    appId: "1:57454899996:web:8897807ec18173472c00d9"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <!--Add Your JS files here -->
     <script src="js/player.js"></script>
     <script src="js/form.js"></script>
